fixed main min height to not show empty white space in transition from surevey to show results

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ main{
   background-color: goldenrod;
   background-size: cover;
   padding-top: 20px;
+  min-height: 700px;
 }
 
 #hr1, #hr2, #hr3{
@@ -64,22 +65,6 @@ h2{
   border: 3px dotted blue;
 }
 
-#results-section{
-  text-align: center;
-  padding-top: 50px;
-}
-
-#results-list{
-  padding:25px 20%;
-}
-
-#results-list li{
-  text-align: left;
-  padding: 5px;
-  list-style-type: square;
-  list-style-position: inside;
-  text-transform: capitalize;
-}
 
 #chart-section{
   margin: 10px 75px 0px 75px;
@@ -90,10 +75,11 @@ h2{
 
 
 footer{
-  position:relative;
+  position:sticky;
   bottom: 0px;
   left:0px;
   width:100%;
+  height:auto;
   background-color: red;
   }
   
